# av_userfilter_v4l2_webcamera

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  Untitled-1.txt  build.ps1  build.sh  build_debug.sh  cbuild.ps1  clear_build.sh  cmake_install.cmake  compile_commands.json  out.txt
avs/: avg.txt  uf_linux.avcode  uf_linux.avproj  uf_linux.avview  uf_linux.hxaml
avs/uf_linux_Filters/: winUserFilterMockUp.cpp  winUserFilterMockUp.h  winUserFilterMockUp.sln  winUserFilterMockUp.vcxproj
headers/: camera.hpp  cpuStats.hpp  cpu_stats.hpp  debug_log.hpp  main.hpp  mean_calculator.hpp  opencv.hpp  paraqueue.hpp  webcamera.hpp  webcamera_manager.hpp
headers/unix/: webcamera.hpp
headers/win/: webcamera.hpp
libv4l2cpp/: CMakeLists.txt  main.cpp
libv4l2cpp/inc/: V4l2Access.h  V4l2Capture.h  V4l2Device.h  V4l2MmapDevice.h  logger.h
libv4l2cpp/src/: V4l2Access.cpp  V4l2Capture.cpp  V4l2Device.cpp  V4l2MmapDevice.cpp  V4l2ReadWriteDevice.cpp  logger.cpp
sources/: camera.cpp  cpuStats.cpp  cpu_stats.cpp  debug_log.cpp  main.cpp  meanCalculator.cpp  mean_calculator.cpp  opencv.cpp  paraqueue.cpp  test.cpp  webcamera.cpp  webcamera_manager.cpp
